[build-system]
requires = ["hatchling", "bs4", "patool", "requests", "gdrivedl"]
build-backend = "hatchling.build"

[project]
name = "clouddl"
version = "0.0.9"
authors = [
  { name="duckduckgrayduck", email="sanjin+clouddl@muckrock.com" },
]
description = "Python library that allows you to parse Google Drive & Dropbox links and download files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/duckduckgrayduck/clouddl"
"Bug Tracker" = "https://github.com/duckduckgrayduck/clouddl/issues"
